--- a/Project_on_Logistic_Regression.ipynb
+++ b/Project_on_Logistic_Regression.ipynb
@@ -1507,7 +1507,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.9.12 ('base')",
+      "display_name": "Python 3.7.0",
       "language": "python",
       "name": "python3"
     },
@@ -1521,11 +1521,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.7.0"
     },
     "vscode": {
       "interpreter": {
-        "hash": "79b8e2806dcacb74bfaf4e9d6fc6be49c15a5d9cf660f98bd752c4c4eaccdf57"
+        "hash": "64369ed8cfce0600ced1436d52f0e48ddc19d9faaddb6575cf39b97aa1c123c4"
       }
     }
   },
